[package]
name = "mia"
version = "0.1.0"
edition = "2021"
authors = ["Azuyamat"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
confy = "0.5.1"
inline_colorization = "0.1.6"
zip = "0.6.6"
serde = { version = "1.0.192", features = ["derive"] }
chrono = "0.4.31"
